410文档同步和死链等低错修改

--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/2.experience-the-hot-row-update-capability-of-oceanbase-database.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/2.experience-the-hot-row-update-capability-of-oceanbase-database.md
@@ -42,7 +42,7 @@ import threading
 config = {
     'user': 'root@test',
     'password': 'root',
-    'host': '172.19.81.183',
+    'host': 'xxx.xxx.xxx.xxx',
     'port': 2881,
     'database': 'test'
 }
@@ -120,7 +120,7 @@ ALTER SYSTEM SET enable_early_lock_release=true tenant= test;
 
 开启热点行功能后，我们再次执行测试。在执行前我们先查看表 `sbtest` 中 `id=1` 的记录，`k` 字段值为 100000，这是因为刚刚执行了一轮默认配置下的 100000 次的更新。
 
-```sql
+```shell
 SELECT * FROM sbtest1 WHERE id=1;
 +----+--------+----+-----+
 | id | k      | c  | pad |
