--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/1.deployment-instructions.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/1.deployment-instructions.md
@@ -29,7 +29,7 @@ OCP 当前支持 OceanBase 数据库的所有主流版本，不仅提供对 Ocea
 
 ## 高可用部署
 
-高可用性部署分为多集群模式和多可用区模式。多集群模式指异地多集群部署，提供跨城 OceanBase 主备集群的管理，支持运维跨 OCP 集群的 OceanBase 主备集群，包括 OceanBase 主备集群的创建、删除、升级、日常切换和容灾切换等，实现双机房高可用容灾架构。
+高可用性部署分为多集群模式和多可用区模式。多集群模式指异地多集群部署，提供跨城 OceanBase 主备库的管理，支持运维跨 OCP 集群的 OceanBase 主备库，包括 OceanBase 主备库的创建、删除、升级、日常切换和容灾切换等，实现双机房高可用容灾架构。
 
 高可用部署情况下，当少数主机或主机上的服务不可用时，整个系统仍然可用。
 
