--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
@@ -6,8 +6,6 @@
 
 ### 语法 1
 
-通过 `INSERT INTO ... SELECT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [INSERT（MySQL 模式）](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) 和 [INSERT（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
-
 ```sql
 INSERT INTO target_table_name[(target_col_name[, target_col_name] ...)]
 SELECT [(source_col_name[, source_col_name] ...)]
@@ -27,12 +25,10 @@ FROM source_table_name
 
 ### 语法 2
 
-通过 `MERGE INTO ... INSERT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [MERGE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md)。
-
-  <main id="notice" >
-    <h4>功能适用性</h4>
-    <p><code>MERGE</code> 语句暂时只支持 OceanBase 数据库 Oracle 模式。</p>
-  </main>
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p><code>MERGE</code> 语句暂时只支持 OceanBase 数据库 Oracle 模式。</p>
+</main>
 
 ```sql
 MERGE INTO target_table_name 
@@ -56,7 +52,7 @@ WHEN NOT MATCHED THEN INSERT VALUES((source_col_name[, source_col_name] ...))
 
 将表 `tbl1` 中符合条件（`age > 10`）的数据插入表 `tbl2` 中。
 
-```sql
+```shell
 obclient [test]> SELECT * FROM tbl1;
 +------+------+------+
 | id   | name | age  |
@@ -102,7 +98,7 @@ obclient [test]> SELECT * FROM tbl2;
 
 如果在表 `tbl1` 中找不到与表 `tbl2` 取值相同的行（`tbl1.id=tbl2.col1 and tbl1.age=tbl2.col2`），那么将 `tbl1` 中的这行插入到 `tbl2` 中，且只插入满足 `tbl1.age < 10` 的行。
 
-```sql
+```shell
 obclient [SYS]> SELECT * FROM tbl1;
 +------+------+------+
 | ID   | NAME | AGE  |
@@ -135,3 +131,9 @@ obclient [SYS]> SELECT * FROM tbl2;
 +------+------+
 2 rows in set
 ```
+
+## 相关文档
+
+* [INSERT（MySQL 模式）](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-of-mysql-mode.md)
+* [INSERT（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)
+* [MERGE（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md)
