--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -16,8 +16,6 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
     DESTINATION [=] ip_port;
 ```
 
-资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.UNIT.md)。
-
 参数解释：
 
 |   参数   |               描述                |
@@ -25,18 +23,13 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
 | unit_id | Unit 编号。                       |
 | ip_port | 将 Unit 迁移到的目标节点地址。 |
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>可以通过 <code>ALTER SYSTEM CANCEL MIGRATE UNIT</code> 语句取消资源单元迁移。取消资源单元迁移详细信息，请参见 <a href="../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md">CANCEL MIGRATE UNIT</a>。</p>
-  </main>
-
 ## 示例
 
 1. 查看资源单元分布。
 
     查看租户 `mysql002` 的资源单元在各 zone 的分布情况。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT A.UNIT_CONFIG_ID,B.ZONE,B.SVR_IP,B.SVR_PORT,A.NAME,A.MAX_CPU,A.MIN_CPU,A.MEMORY_SIZE,A.LOG_DISK_SIZE,A.MAX_IOPS,A.MIN_IOPS,A.IOPS_WEIGHT FROM DBA_OB_UNIT_CONFIGS A,DBA_OB_UNITS B WHERE A.UNIT_CONFIG_ID=B.UNIT_ID AND A.NAME LIKE '%mysql002%';
     +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | ZONE  | SVR_IP         | SVR_PORT | NAME                         | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -52,14 +45,14 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
 
     将租户 `mysql002` 的 zone3 中的资源单元从 `10.10.10.3:2882` 迁移至 `10.10.10.4:2882`。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> ALTER SYSTEM MIGRATE UNIT = 1008 DESTINATION = '10.10.10.4:2882';
     Query OK, 0 rows affected
     ```
 
 3. 查看迁移情况。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT A.UNIT_CONFIG_ID,B.ZONE,B.SVR_IP,B.SVR_PORT,A.NAME,A.MAX_CPU,A.MIN_CPU,A.MEMORY_SIZE,A.LOG_DISK_SIZE,A.MAX_IOPS,A.MIN_IOPS,A.IOPS_WEIGHT FROM DBA_OB_UNIT_CONFIGS A,DBA_OB_UNITS B WHERE A.UNIT_CONFIG_ID=B.UNIT_ID AND A.NAME LIKE '%mysql002%';
     +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | ZONE  | SVR_IP         | SVR_PORT | NAME                         | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -70,3 +63,9 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
     +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     3 rows in set
     ```
+
+## 相关文档
+
+* 资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md)。
+
+* 取消资源单元迁移详细信息，请参见 [CANCEL MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md)。
