--- a/zh-CN/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
@@ -125,7 +125,7 @@ bin/dbcat convert -H<host> -P<port> -u<user> -p<password>  -D<database> --schema
 这里以导出 DB2 LUW 11.5.x 版本下 database 为 test 的所有对象的结构，并将其迁移到 4.0.0 版本的 OceanBase 集群中的 MySQL 租户为示例。
 
 ```shell
-bin/dbcat convert -H 100.88.109.129 -P 50001 -udb2inst2 -p****** --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
+bin/dbcat convert -H xxx.xxx.xxx.xxx -P 50001 -udb2inst2 -p****** --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
 ```
 
 特别说明：
@@ -134,19 +134,19 @@ bin/dbcat convert -H 100.88.109.129 -P 50001 -udb2inst2 -p****** --schema TESTDB
 
 * 参数中的 --from 和 --to 为源端和目的端的数据库类型，需要详细到版本号。当前 dbcat 支持的源端和目标端数据库详细如下：
 
-  | 源端数据库类型  |	目标端数据库类型 |
+  | 源端数据库类型  | 目标端数据库类型 |
   |----------------|----------------|
-  |TiDB |	OBMYSQL |
-  |PG |	OBMYSQL |
-  |SYBASE |	OBORACLE |
-  |MYSQL |	OBMYSQL |
-  |ORACLE |	OBORACLE |
-  |ORACLE |	OBMYSQL |
-  |DB2 IBM i	 | OBORACLE |
-  |DB2 LUW	 | OBORACLE |
-  |DB2 LUW |	OBMYSQL |
-  |OBMYSQL	 | MYSQL |
-  |OBORACLE |	ORACLE |
+  |TiDB | OBMYSQL |
+  |PG | OBMYSQL |
+  |SYBASE | OBORACLE |
+  |MYSQL | OBMYSQL |
+  |ORACLE | OBORACLE |
+  |ORACLE | OBMYSQL |
+  |DB2 IBM i | OBORACLE |
+  |DB2 LUW | OBORACLE |
+  |DB2 LUW | OBMYSQL |
+  |OBMYSQL | MYSQL |
+  |OBORACLE | ORACLE |
 
   其中 OBMYSQL 为 OceanBase 数据库的 MySQL租户，OBORACLE 为 OceanBase 数据库的 Oracle 租户。
 
@@ -262,4 +262,4 @@ obclient [test]> desc bmsql_customer;
 
 ```
 
-经对比发现表字段的字符类型以及长度会有一定的转变，更多关于表字段转换的信息请参见[创建 DB2 LUW 至 OceanBase 数据库 Oracle 租户的数据迁移项目](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001043143) 中的数据类型映射。
+经对比发现表字段的字符类型以及长度会有一定的转变，更多关于表字段转换的信息请参见 [创建 DB2 LUW 至 OceanBase 数据库 Oracle 租户的数据迁移项目](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-0000000001043143) 中的数据类型映射。
