410文档同步和死链等低错修改2

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
@@ -43,7 +43,7 @@
 
 * 对经常更新的表要避免对其进行过多的索引，对经常用于查询的字段应该创建索引。
 
-* 数据量小的表最好不要使用索引，因为由于数据较少，可能查询全部数据花费的时间比遍历索引的时间还要短，索引就可能不会产生优化效果。
+* 数据量小的表建议不要使用索引，因为由于数据较少，可能查询全部数据花费的时间比遍历索引的时间还要短，索引就可能不会产生优化效果。
 
 * 当修改性能远远大于检索性能时，不建议创建索引。
 
