410文档同步和死链等低错修改3

--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
@@ -18,9 +18,9 @@ OceanBase 数据库支持单机部署。单机部署仅包含一个 Zone 并且 
 
 在安装 OceanBase 数据库之前，需要确认以下信息：
 
-* OBServer 服务器已完成相关配置。有关配置 OBServer 服务器详细信息，请参见 [服务器配置](../2.preparations-before-deployment/2.server-configuration.md)。
+* OBServer 服务器已完成相关配置。有关配置 OBServer 服务器详细信息，请参见 [服务器配置](../../2.preparations-before-deployment/2.server-configuration.md)。
 
-* 部署环境已完成相关配置。有关部署环境的详细信息，请参见 [部署环境配置](../4.command-line-deployment/1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md)。
+* 部署环境已完成相关配置。有关部署环境的详细信息，请参见 [部署环境配置](../1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md)。
 
 * 请联系技术支持获取 OceanBase 数据库 RPM 包。
 
