--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/7.delete-a-consumer-group-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/7.delete-a-consumer-group-of-mysql-mode.md
@@ -40,8 +40,8 @@
    5 rows in set
    ```
 
-   有关 `oceanbase.DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_CONSUMER_GROUPS](../../../../12.reference-guide/4.system-view-mysql-mode/2.dictionary-view/74.oceanbase-dba_rsrc_consumer_groups.md)。
+   有关 `oceanbase.DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_CONSUMER_GROUPS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/208.oceanbase-dba_rsrc_consumer_groups.md)。
 
 ## 相关文档
 
-[DELETE_CONSUMER_GROUP](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/5.delete-consume-group-mysql.md)
+[DELETE_CONSUMER_GROUP](../../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/5.delete-consume-group-mysql.md)
