--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -37,5 +37,5 @@
 
 ## 相关文档
 
-更多 `CREATE DATABASE` 语句相关的语法说明请参见 [CREATE DATABASE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-of-mysql-mode.m)。
+更多 `CREATE DATABASE` 语句相关的语法说明请参见 [CREATE DATABASE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-of-mysql-mode.md)。
   
