--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/6.delete-a-plan-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/6.delete-a-plan-of-mysql-mode.md
@@ -35,8 +35,8 @@
    1 row in set
    ```
 
-   有关 `oceanbase.DBA_RSRC_PLANS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLANS](../../../../12.reference-guide/4.system-view-mysql-mode/2.dictionary-view/71.oceanbase-dba_rsrc_plans.md)。
+   有关 `oceanbase.DBA_RSRC_PLANS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLANS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/205.oceanbase-dba_rsrc_plans-mysql.md)。
 
 ## 相关文档
 
-[DELETE_PLAN](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/6.delete-plan-mysql.md)
+[DELETE_PLAN](../../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/6.delete-plan-mysql.md)
