--- a/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/21.datadir-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/21.datadir-of-oracle-mode.md
@@ -1,13 +1,11 @@
-datadir 
-============================
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/datadir-1-2-3-4
+# datadir
+
 `datadir` 用于查看数据存储的本地磁盘路径。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>该变量仅用于兼容，OceanBase 数据库当前暂未实现该变量的功能。</p>
   </main>
-
 
 | **属性** |         **描述**         |
 |--------|------------------------|
@@ -16,5 +14,3 @@ datadir
 | 取值范围   | N/A                    |
 | 生效范围   | Global                 |
 | 是否可修改  | 否                      |
-
-
