--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/1.dictionary-view-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/1.dictionary-view-overview-of-mysql-mode.md
@@ -117,8 +117,8 @@ Outline
 | [oceanbase.DBA_OB_SERVERS](50.oceanbase-dba_ob_servers-of-mysql-mode.md)                   | 展示所有 OBServer 节点的信息。        |
 | [oceanbase.DBA_OB_ZONE_MAJOR_COMPACTION](62.oceanbase-dba_ob_zone_major_compaction-of-mysql-mode.md)     | 展示本租户各个 Zone 的合并信息。       |
 | [oceanbase.DBA_OB_ZONES](63.oceanbase-dba_ob_zones-of-mysql-mode.md)                     | 展示所有 Zone 的信息。            |
-| [oceanbase.CDB_OB_FREEZE_INFO](180.oceanbase.cdb_ob_freeze_info-of-mysql-mode.md)                     | 展示合并（major_freeze）产生的版本信息。            |
-| [oceanbase.DBA_OB_FREEZE_INFO](181.oceanbase.dba_ob_freeze_info-of-mysql-mode.md)                     | 展示合并（major_freeze）产生的版本信息。          |
+| [oceanbase.CDB_OB_FREEZE_INFO](180.oceanbase-cdb_ob_freeze_info-of-mysql-mode.md)                     | 展示合并（major_freeze）产生的版本信息。            |
+| [oceanbase.DBA_OB_FREEZE_INFO](181.oceanbase-dba_ob_freeze_info-of-mysql-mode.md)                     | 展示合并（major_freeze）产生的版本信息。          |
 
 分区
 -----------------------
@@ -165,7 +165,7 @@ Session 相关
 | [information_schema.SESSION_VARIABLES](21.information_schema-session_variables-of-mysql-mode.md) | 记录 Session 的变量信息。                           |
 | [oceanbase.CDB_OB_DEADLOCK_EVENT_HISTORY](157.oceanbase-cdb_ob_deadlock_event_history-of-mysql-mode.md) | 展示死锁事件的历史记录，该视图在 root 租户下展示所有租户的历史记录。                       |
 | [oceanbase.DBA_OB_DEADLOCK_EVENT_HISTORY](158.oceanbase-dba_ob_deadlock_event_history-of-mysql-mode.md) | 展示死锁事件的历史记录，该视图在非 root 租户下展示本租户的历史记录。                           |
-| [oceanbase.DBA_OB_SERVER_EVENT_HISTORY](179.oceanbase.dba_ob_server_event_history-of-mysql-mode.md) | 展示 OBServer 节点事件历史信息。                      |
+| [oceanbase.DBA_OB_SERVER_EVENT_HISTORY](179.oceanbase-dba_ob_server_event_history-of-mysql-mode.md) | 展示 OBServer 节点事件历史信息。                      |
 
 用户登录相关
 ---------------------------
