--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -106,7 +106,7 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 | 配置项 | 修改类型 | 默认值 | 新默认值 | 描述 |
 | --- | --- | --- | --- | --- |
 | enable_cgroup | 新增 | 
- | True | 是否开启 Cgroup 功能。 |
+ | True | 是否开启 cgroup 功能。 |
 | sql_login_thread_count | 新增 | 
  | 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
 | ob_query_switch_leader_retry_timeout | 新增 | 
