--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/98.ob-321.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/98.ob-321.md
@@ -414,10 +414,10 @@ OceanBase 数据库 V3.2.1 推荐使用的平台工具版本如下。
 | objdbc           | V1.1.10.1 V2.2.2 | 1.x 是 gpl 协议 2.x 是 lgpl 协议                                                         |
 | OCP              | V3.1.2                           |                                                                                                    |
 | ODC              | V3.2.0                           |                                                                                                    |
-| OMS              | V3.1.0                           | OMS V3.1.0 仅支持 MYSQL/ORACLE 单向迁移至 OceanBase 数据库 V3.2.1 版本，不支持反向迁移；也不支持以 OceanBase 数据库作为源端的迁移和同步链路。 |
+| OMS              | V3.1.0                           | OMS V3.1.0 仅支持 MySQL/ORACLE 单向迁移至 OceanBase 数据库 V3.2.1 版本，不支持反向迁移；也不支持以 OceanBase 数据库作为源端的迁移和同步链路。 |
 | OBCI             | V2.0.1.1                         |                                                                                                    |
 | ECOB             | V1.1.6                           |                                                                                                    |
-| obclient         | V2.1.1                           |                                                                                                    |
+| OPClient         | V2.1.1                           |                                                                                                    |
 | ob_loader_dumper | V2.2.0                           |                                                                                                    |
 
 ## 缺陷及影响
