--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -379,7 +379,7 @@ V2.2.77 BP9
 
 * 修复了分区表场景下 `SHOW TABLE STATUS` 结果显示为 NULL 的问题。
 
-* 修复了 Oracle 模式下设置 `global time_zone` 后，obclient 连接报错 `unkonwn timezone` 的问题。
+* 修复了 Oracle 模式下设置 `global time_zone` 后，OBClient 连接报错 `unkonwn timezone` 的问题。
 
 * 修复了 MySQL 模式下删除表后，用户对该表的操作权限仍然存在的问题。
 
