--- a/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/62.ob_compatibility_mode-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/62.ob_compatibility_mode-of-oracle-mode.md
@@ -11,7 +11,7 @@
 | 是否可修改   | 该变量支持在创建租户时指定，租户创建后不能通过 SQL 语句修改                                                                                                |
 | 是否参与序列化 | 是                                                                                                                               |
 
-使用 `CREATE TENANT` 语句创建租户时，指定 `ob_compatibility_mode` 变量的值为 `mysql` 的示例如下：
+使用 `CREATE TENANT` 语句创建租户时，指定 `ob_compatibility_mode` 变量的值为 `MYSQL` 的示例如下：
 
 ```shell
 CREATE TENANT IF NOT EXISTS t1 zone_list = ('zone1'), primary_zone = 'zone1', resource_pool_list = ('pool1') SET ob_compatibility_mode = 'mysql',lower_case_table_names = 0;
