--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -45,7 +45,7 @@
 
    根据查询结果，如果 `PREVIOUS_ARBITRATION_SERVICE` 列的值为非空，则表示后台变更流程还未完成，需要等待变更流程结束。如果 `PREVIOUS_ARBITRATION_SERVICE` 列的值为空，则表示后台变更流程已完成，仲裁服务实际已替换成功。
 
-   有关 `DBA_OB_ARBITRATION_SERVICE` 视图的更多介绍，请参见 [DBA_OB_ARBITRATION_SERVICE](视图文档暂未输出，暂时无法添加链接)。
+   有关 `DBA_OB_ARBITRATION_SERVICE` 视图的更多介绍，请参见 [DBA_OB_ARBITRATION_SERVICE](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/196.oceanbase-dba_ob_arbitration_service-mysql.md)。
 
 ## 相关文档
 
