--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -14,9 +14,9 @@
 
   OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001031920)。
   
-* OBProxy
+* ODP
 
-  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBProxy。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982768)
+  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBD（又称为 OBProxy）。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982768)
 
 * OCP Express
   
@@ -26,9 +26,9 @@
 
 在连接 OceanBase 数据库之前，请您确认以下信息：
 
-* 您的机器满足软硬件要求。详细信息，参考 [软硬件要求](../1.requirements-for-software-and-hardware.md)。
+* 您的机器满足软硬件要求。详细信息，参考 [软硬件要求](1.requirements-for-software-and-hardware.md)。
 
-* 生产环境下，您需要进行环境和配置检查，具体操作请参考 [部署前配置](../2.environment-and-configuration-checks.md)。
+* 生产环境下，您需要进行环境和配置检查，具体操作请参考 [部署前配置](2.environment-and-configuration-checks/1.view-resources-optional.md) 章节。
 
 * 中控机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001031921)。
 
@@ -60,12 +60,12 @@
   </ul>
 </main>
 
+## 操作步骤
+
 <main id="notice" type='notice'>
   <h4>注意</h4>
   <p>以下内容以 x86 架构的 CentOS Linux 7.9 镜像作为环境，其他环境可能略有不同。</p>
 </main>
-
-## 操作步骤
 
 ### 步骤一：（可选）下载并安装 all-in-one 安装包
 
@@ -136,21 +136,29 @@
 
    若您机器中的 OBD 是通过解压 all-in-one 安装包的方式安装，则可在 `~/.oceanbase-all-in-one/conf` 目录下查看 OBD 提供的配置文件示例。请根据您的资源条件选择相应的配置文件。
 
-   小规格开发模式，适用于个人设备（内存不低于 8 GB）
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>配置文件分为小规格开发和专业开发两种模式，两种模式的配置文件中配置项基本相同，配置的规格略有不同，您可根据实际资源条件进行选择。</p>
+     <ul>
+     <li>小规格开发模式：适用于个人设备（内存不低于 8 GB），配置文件名中带有 <code>mini</code> 或 <code>min</code> 标识。</li>
+     <li>专业开发模式：适用于高配置 ECS 或物理服务器（可用资源不低于 16 核 64 GB）。</li>
+   </main>
 
-   * 分布式部署配置样例：mini-distributed-example.yaml
+   如果您选择单机部署，即目标机器只有一台，可使用单机部署配置文件。
 
-   * 分布式部署 + ODP 配置样例：mini-distributed-with-obproxy-example.yaml
+   * 本地单机部署配置样例：mini-local-example.yaml、local-example.yaml
 
-   * 分布式部署 + ODP + 监控配置样例：all-components-min.yaml
+   * 单机部署配置样例：mini-single-example.yaml、single-example.yaml
+
+   * 单机部署 + ODP 配置样例：mini-single-with-obproxy-example.yaml、single-with-obproxy-example.yaml
   
-   专业开发模式，适用于高配置 ECS 或物理服务器（可用资源不低于 16 核 64 GB）
+   如果您选择分布式部署，即目标机器有多台，可使用分布式安装配置文件。
 
-   * 分布式部署配置样例：distributed-example.yaml
+   * 分布式部署配置样例：mini-distributed-example.yaml、distributed-example.yaml
 
-   * 分布式部署 + ODP 配置样例：distributed-with-obproxy-example.yaml
+   * 分布式部署 + ODP 配置样例：mini-distributed-with-obproxy-example.yaml、distributed-with-obproxy-example.yaml
 
-   * 分布式部署 + ODP + 监控配置样例：all-components.yaml
+   * 分布式部署 + ODP + 监控配置样例：all-components-min.yaml、all-components.yaml
 
 5. 修改配置文件。
 
@@ -385,4 +393,4 @@ obclient -h<IP> -P<PORT> -uroot@sys -p
 
   命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933) 中 `obd cluster tenant create` 命令。
 
-* 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
+* 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
