--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/2.deploy-by-ocp.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/2.deploy-by-ocp.md
@@ -29,20 +29,15 @@
 
 1. 使用 admin 账号登录 OCP。
 
-   <main id="notice" type='explain'>
-     <h4>说明</h4>
-     <p>请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。</p>
-   </main>
-
 2. 在左侧导航栏中单击 **主机**，进入 **主机** 页面。
 
 3. 在 **主机** 页面右上角单击 **添加主机**。
 
-   ![添加主机](2.deploy-by-ocp-01)
+   ![添加主机](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-01.png)
 
 4. 在弹出的对话框中填写机器信息。
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/1%E6%B7%BB%E5%8A%A0%E4%B8%BB%E6%9C%BA.png)
+   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-02.png)
 
    各字段填写说明如下表所示。
 
@@ -50,10 +45,10 @@
    |------------|----------------------|
    | **IP 地址**  | 待添加机器的 IP，请输入机器的 IPv4 地址。  |
    | **SSH 端口** | 默认为 22。               |
-   | **机型**   | 为配置相同的主机指定的一个标签，便于 OCP 更好地管理主机。如果没有对应的机型，可以单击 **新增机型**，添加新的机型。|
-   | **机房**   | 选择机器所处机房。如果没有对应的机房，可单击 **新增机房** 在 OCP 中新增机房信息。机房信息包括 **机房** 与 **区域**。<ul><li>机房是 OceanBase 集群需要记录的一种主机属性，这个属性会作为 OceanBase 负载均衡和 SQL 语句路由策略的参考项，请按照实际情况填写。</li><li>区域用于表示主机所处的地理区域，是 OceanBase 集群需要记录的主机属性之一，对于 OceanBase 集群的负载均衡和 SQL 语句路由策略会有一定的影响，请按照实际情况填写。</li></ul><blockquote><b>说明</b></br> OCP V3.1.1 版本开始支持多 AZone 模式，新增机房时，将在当前 OCP 所在的 AZone 中创建新的机房。</blockquote> |
+   | **机型**   | 为配置相同的主机指定的一个标签，便于 OCP 更好地管理主机。如果没有对应的机型，可在下拉菜单中单击 **新增机型**，添加新的机型。|
+   | **机房**   | 选择机器所处机房。如果没有对应的机房，可在下拉菜单中单击 **新增机房** 在 OCP 中新增机房信息。机房信息包括 **机房** 与 **区域**。<ul><li>机房是 OceanBase 集群需要记录的一种主机属性，这个属性会作为 OceanBase 负载均衡和 SQL 语句路由策略的参考项，请按照实际情况填写。</li><li>区域用于表示主机所处的地理区域，是 OceanBase 集群需要记录的主机属性之一，对于 OceanBase 集群的负载均衡和 SQL 语句路由策略会有一定的影响，请按照实际情况填写。</li></ul><blockquote><b>说明</b></br> OCP V3.1.1 版本开始支持多 AZone 模式，新增机房时，将在当前 OCP 所在的 AZone 中创建新的机房。</blockquote> |
    | **主机类型**     | 有 **物理机** 和 **容器** 两种选项。   |
-   | **凭据**   | 选择远程登录物理机使用的凭据，您可以在下拉菜单中单击 **新增凭据** 来新建凭据。 </br> 新增凭据时需注意：<ul><li>**凭据名**：以英文字母开头、英文或数字结尾，可包含英文、数字和下划线，且长度为 2 ~ 32。</li><li>**授权类型**：包含用户名/密码和 SSH 私钥两种方式。</li> <li>**用户类型**：支持拥有 ROOT 权限的 SSH 用户，拥有 ROOT 权限的普通用户须先配置免密执行 sudo 指令。OCP 目前仅支持配置所有指令免密执行 sudo，即在 `/etc/sudoers` 文件中，添加 `username ALL=(ALL) NOPASSWD:ALL`。</li></ul>|
+   | **凭据**   | 选择远程登录物理机使用的凭据，您可以在下拉菜单中单击 **新增凭据** 来新建凭据。 </br> 新增凭据时需注意：<ul><li>**凭据名**：以英文字母开头、英文或数字结尾，可包含英文、数字和下划线，且长度为 2 ~ 32。</li><li>**授权类型**：包含用户名/密码和 SSH 私钥两种方式。</li> <li>**用户类型**：支持拥有 root 权限的 SSH 用户，拥有 root 权限的普通用户须先配置免密执行 sudo 指令。OCP 目前仅支持配置所有指令免密执行 sudo，即在 `/etc/sudoers` 文件中，添加 `username ALL=(ALL) NOPASSWD:ALL`。</li></ul>|
    | **主机别名（可选）**   | 主机别名是您为配置相同的主机指定的一个标签，建议您指定有意义的名称，便于更好地管理主机。   |
    | **说明（可选）**     | 主机的注释，便于更好地管理主机。      |
 
@@ -65,28 +60,28 @@
 
 1. 在 OCP 白屏界面中根据实际业务场景，找到新建集群的入口。
 
-   * 如果您没有可管理的集群，系统会在 集群 页面提示您新建集群，可直接在提示信息中单击 **创建集群**。
-   * 如果您已有可管理的集群，可单击 **集群** 后在 **集群** 页面右上角单击 **新建集群**。
+   * 如果您没有可管理的集群，系统会在 **集群** 页面提示您新建集群，可直接在提示信息中单击 **创建集群**。
+
+   * 如果您已有可管理的集群，可单击 **集群** 后在 **集群** 页面右上角单击 **创建集群**。
 
 2. 在 **创建集群** 页面，设置集群的基础信息。
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/2%E5%88%9B%E5%BB%BA%E9%9B%86%E7%BE%A4%E5%9F%BA%E7%A1%80%E4%BF%A1%E6%81%AF.png)
+   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-03.png)
 
    基础信息相关说明如下表所示。
 
    |    **配置**       |     **描述**    |
    |-------------------|-----------------|
-   | **集群类型**      | 可选择 **主集群** 或 **备集群**，此处选择 **主集群**。|
    | **集群名称**      | 自定义待管理的集群的名称。集群名称必须以英文字母开头，可支持大小写字母、数字和下划线，长度为 2 \~ 48 个字符。 |
-   | **root@sys 密码** | 支持自定义或随机生成。密码需要满足以下复杂度条件：</br> <ul><li>长度：8 \~ 32 字符</li><li>支持字母、数字和特殊字符，且至少包含大、小写字母、数字和特殊字符各 2 个</li><li>支持的特殊字符如下：~!@#%^&*_-+=`|(){}[]:;',.?/</li></ul>。 </br>此外，您可以单击 **复制密码**，将自定义或随机生成的密码复制到剪贴板。 |
-   | **OB 版本**   | 可以从列表中选择已有的 OceanBase 数据库版本，也可以在列表下方单击 **添加版本**，上传 OceanBase RPM 包。     |
-   | **关联 OBProxy 集群** | 该选项用于关联已有的 ODP 集群，本例中不开启该选项。 有关关联 ODP 集群的方法，请参见 《OCP 用户指南》。 |
+   | **root@sys 密码** | 支持自定义或随机生成。密码需要满足以下复杂度条件：</br> <ul><li>长度：8 \~ 32 字符</li><li>支持字母、数字和特殊字符，且至少包含大、小写字母、数字和特殊字符各 2 个</li><li>支持的特殊字符如下：`~!@#%^&*_-+=|(){}[]:;,.?/`</li></ul>。 </br>输入密码后，您可以单击 **复制密码**，将自定义或随机生成的密码复制到剪贴板。 |
+   | **OB 版本**   | 可以从列表中选择已有的 OceanBase 数据库版本，也可以在下拉菜单中单击 **添加版本**，上传 OceanBase RPM 包。     |
+   | **关联 OBProxy 集群** | 该选项用于关联已有的 ODP 集群，如您创建的是多副本的 OceanBase 集群，建议您打开关联 OBProxy 集群开关，为该 OceanBase 集群关联 OBProxy 集群。 关联后您的业务涉及的 SQL 请求将会被精准转发到相应的副本，使您对 OceanBase 数据库的访问效果能够媲美访问单机数据库。<ul><li>默认使用 proxyro 用户关联，您无需填写用户名和密码。</li><li>在下拉框中选择要关联的 OBProxy 集群。如下拉框中没有可关联的 OBProxy 集群，请参考本文 [前提条件](#前提条件) 中的描述添加 OBProxy 集群。</li></ul> |
 
 3. 设置集群的部署模式信息。
 
-   默认添加 3 个 Zone 的信息，如果您希望部署的集群 Zone 的个数大于 3 个，您可以在下方单击 **新增** 按钮，增加 Zone 信息。如果部署的集群 Zone 的个数小于 3 个，您可以单击 Zone 后面的删除图标。
+   默认添加 3 个 Zone 的信息，如果您希望部署的集群 Zone 的个数大于 3 个，您可以在下方单击 **+ 新增** 按钮，增加 Zone 信息。如果部署的集群 Zone 的个数小于 3 个，您可以单击 Zone 后面的删除图标。
 
-   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/3%E9%83%A8%E7%BD%B2%E6%A8%A1%E5%BC%8F.png)
+   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-04.png)
 
    每个 Zone 需要设置的信息及其说明如下表所示。
 
