--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/12.LIMIT.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/12.LIMIT.md
@@ -202,4 +202,4 @@ Outputs & filters:
 | percent   | 按照数据总行数的百分比输出，是一个常量。                                                                            |
 | with_ties | 是否在排序后的将最后一行按照等值一起输出。 例如，要求输出最后一行，但是排序之后有两行的值都为 1，如果设置了最后一行按照等值一起输出，那么这两行都会被输出。 |
 
-以上 LIMIT 算子的新增的计划展示属性，都是在 Oracle 模式下的 `FETCH` 功能特有的，不影响 MySQL 模式计划。关于 Oracle12c 的 `FETCH` 语法的详细信息，请参见 [Oracle 12c Fetch Rows](https://renenyffenegger.ch/notes/development/databases/Oracle/SQL/select/first-n-rows/index#ora-sql-row-limiting-clause)。
+以上 `LIMIT` 算子的新增的计划展示属性，都是在 Oracle 模式下的 `FETCH` 功能特有的，不影响 MySQL 模式计划。关于 Oracle12c 的 `FETCH` 语法的详细信息，请参见 [Oracle 12c Fetch Rows](https://renenyffenegger.ch/notes/development/databases/Oracle/SQL/select/first-n-rows/index#ora-sql-row-limiting-clause)。
