--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/19.dbms-application-info-oracle/1.dbms-application-info-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/19.dbms-application-info-oracle/1.dbms-application-info-overview-oracle.md
@@ -23,5 +23,5 @@
 | [READ_CLIENT_INFO](2.read-client-info-oracle.md)     | 读取当前会话的client_info 字段的值。         |
 | [READ_MODULE](3.read-module-oracle.md)               | 读取当前会话的的模块和操作字段的值。          |
 | [SET_ACTION](4.set-action-oracle.md)                 | 设置当前模块中当前操作的名称。                |
-| [SET_CLIENT_INFO](5set-client-info-oracle.md) | 设置客户端应用程序的附加信息。 |
+| [SET_CLIENT_INFO](5.set-client-info-oracle.md) | 设置客户端应用程序的附加信息。 |
 | [SET_MODULE](6.set-module-oracle.md)                 | 将当前正在运行的模块的名称设置为新模块。       |
