--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
@@ -24,7 +24,7 @@
 
 ### 步骤 1：下载并安装 all-in-one package
 
-从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、 ODPy、obagent、Grafana 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
+从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、 ODP、OBAgent、Grafana 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
 all-in-one package 提供了两种安装方式：
 
 #### 在线安装 all-in-one package
