--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -302,7 +302,7 @@
           - 10.10.10.4
         global:
           home_path: /home/admin/grafana
-          login_password: oceanbase
+          login_password: *********
       ```
 
 ### 步骤三：部署 OceanBase 集群
