--- a/zh-CN/6.manage/7.monitor/4.samples.md
+++ b/zh-CN/6.manage/7.monitor/4.samples.md
@@ -2,9 +2,15 @@
 
 1. 首先基于系统监控发现租户的 QPS_RT 和 TPS_RT 出现飙升。
 
+    ![sample1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/maintinance/sample1.jpg)
+
 2. 然后下钻分析，发现磁盘读的 IOPS 和数据量发生飙升，怀疑是 SQL 问题。
 
+    ![sample2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/maintinance/sample%202.jpg)
+
 3. 基于 SQL Audit，定位到疑点 SQL 语句。
+
+    ![sample2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/maintinance/sample3.jpg)
 
     结论：
     
