--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/159.dbms-stats-oracle/17.gather-table-stats-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/159.dbms-stats-oracle/17.gather-table-stats-oracle.md
@@ -56,7 +56,6 @@ DBMS_STATS.GATHER_TABLE_STATS (
 收集用户 `testUser01` 的 `tbl1` 表的统计信息。
 
 ```sql
-obclient> CALL DBMS_STATS.GATHER_TABLE_STATS ('testUser01', 'tbl1', method_opt=>'FOR ALL COLUMNS SIZE 
-   5', granularity=>'ALL', degree=>4);
+obclient> CALL DBMS_STATS.GATHER_TABLE_STATS ('testUser01', 'tbl1', method_opt=>'FOR ALL COLUMNS SIZE 5', granularity=>'ALL', degree=>4);
 Query OK, 0 rows affected
 ```
