--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/5.view-the-restore-history.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/5.view-the-restore-history.md
@@ -84,6 +84,6 @@
 
 恢复操作执行成功后，恢复后的租户均为备租户，您可执行如下操作:
 
-* 执行`recover`命令, 作为备租户继续从日志归档源租户回放日志, 具体操作参见 [备租户日志回放](7.recover-the-standby-tenant.md)。
+* 执行`recover`命令, 作为备租户继续日志归档从源租户回放日志, 具体操作参见 [备租户日志回放](7.recover-the-standby-tenant.md)。
 
 * 执行备切主命令，将备租户转换为主租户，具体操作参见 [备租户转为主租户](6.active-standby-tenant.md)。
