--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/1.config-cgroups-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/1.config-cgroups-of-oracle-mode.md
@@ -94,7 +94,7 @@ OoceanBase 数据库的当前版本中，由于租户工作线程和大部分后
 
 ### 步骤二：部署数据库
 
-cgroup 系统目录配置成功后，即可部署 OceanBase 数据库。 OceanBase 数据库的详细安装操作请参见 [部署数据库](../../../2.deploy-the-oceanbase-database/1.deployment-introduction.md)。
+cgroup 系统目录配置成功后，即可部署 OceanBase 数据库。 OceanBase 数据库的详细安装操作请参见 [部署数据库](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md)。
 
 ### 步骤三：与 OceanBase 数据库建立软链接
 
