--- a/zh-CN/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
+++ b/zh-CN/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
@@ -204,9 +204,9 @@ OceanBase 数据库在优化器方面与 MySQL 数据库的区别，主要表现
 
 * 查看统计信息
 
-  * 支持执行 `ANALYZE TABLE` 语句查询数据字典表存储有关列值的直方图统计信息。
+  * 支持执行 `ANALYZE TABLE` 语句手动查询数据字典表存储有关列值的直方图统计信息。
 
-  * 支持通过内部表 `__all_meta_table` 查看表统计信息和列统计信息。
+  * 支持通过视图自动查看表统计信息和列统计信息。
 
 * 查询改写优化
 
