--- a/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
+++ b/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
@@ -187,8 +187,6 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 * 支持外键。
 
-* 不支持添加外键约束的 `DISABLE` 和 `ENABLE`。
-
 * 支持使用 `ALTER TABLE` 语句添加外键约束。
 
 * 不支持级联中的 `SET NULL`。
@@ -247,7 +245,7 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 **数据库链接**
 
-OceanBase 数据库目前支持 OceanBase 数据库到 OceanBase 数据库的只读操作。
+目前支持 OceanBase 数据库到 OceanBase 数据库、OceanBase 数据库到 Oracle 数据库的读和写操作。
 
 ## 安全特性
 
