--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
@@ -130,7 +130,7 @@ obclient> SELECT * FROM t2@ob_dblink;
 
 更多 `UPDATE` 语句的详细使用及说明，请参见 [UPDATE](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/6.update-of-oracle-mode.md)。
 
-## 替换数据
+### 替换数据
 
 通过 DBLink 替换表数据的基本语法如下：
 
