410ofuse低错修改及部署相关内容添加

--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -51,7 +51,9 @@
 
   除了支持标准的 JDBC 应用程序编程接口（API），OceanBase Connector/J 还兼容 Oracle Driver 的使用方式，OceanBase 的 Oracle 模式兼容 Oracle 的大部分语法。
 
-  OceanBase Connector/J 采用一键安装模式，驱动安装包名称为：`oceanbase-client-[版本号].jar`。请联系技术支持人员获取 OceanBase Connector/J 驱动程序安装包。关于具体安装步骤，请参见官网文档 [OceanBase Connector/J](https://www.oceanbase.com/docs/enterprise/oceanbase-connector-j-cn)。
+  OceanBase Connector/J 采用一键安装模式，驱动安装包名称为：`oceanbase-client-[版本号].jar`。
+  
+  请在 OceanBase 官方网站的 **资源 -> 下载中心 -> 企业版 -> 驱动和中间件** 下的 [OceanBase JDBC 驱动程序](https://www.oceanbase.com/softwarecenter-enterprise) 中单击对应的版本，填写信息后自助下载 OceanBase Connector/J 驱动程序安装包。关于具体安装步骤，请参见官网文档 [OceanBase Connector/J](https://www.oceanbase.com/docs/enterprise/oceanbase-connector-j-cn)。
 
    使用 Java 应用程序连接 OceanBase 数据库的具体操作示例请参见 [Java 应用程序连接 OceanBase 数据库](../../../2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md)。
 
