--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-* 请确认当前集群中已启动并添加仲裁服务，在集群中启动并添加仲裁服务的详细操作，请参见 [创建仲裁服务](部署文档中还无该内容，链接暂时无法添加)。
+* 请确认当前集群中已启动并添加仲裁服务，在集群中启动并添加仲裁服务的详细操作，请参见 [部署两副本加仲裁服务的 OceanBase 集群](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md) 中的 **步骤四：启动、添加仲裁服务**。
 
 * 开启仲裁服务前，需要确认待开启仲裁服务的租户的 Locality 为 2F 或 4F ，当前仅支持 Locality 为 2F 或 4F 的租户开启仲裁服务。
 
@@ -18,7 +18,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，查看租户的仲裁服务状态。
 
