--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
@@ -16,7 +16,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，删除仲裁服务。
 
@@ -39,7 +39,7 @@
 
 ## 后续操作
 
-删除仲裁服务后，如果需要再使用仲裁服务，则需要重新部署仲裁服务，具体操作可参见 [创建仲裁服务](链接暂时无法添加)。
+删除仲裁服务后，如果需要再使用仲裁服务，则需要重新部署仲裁服务，具体操作请参见 [部署两副本加仲裁服务的 OceanBase 集群](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md) 中的 **步骤四：启动、添加仲裁服务**。
 
 ## 相关文档
 
