--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
@@ -12,7 +12,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，查看租户的仲裁服务状态。
 
