--- a/zh-CN/7.reference/7.command-line-tools/8.ob-agent/2.configuration-reference/1.kv-configuration-file.md
+++ b/zh-CN/7.reference/7.command-line-tools/8.ob-agent/2.configuration-reference/1.kv-configuration-file.md
@@ -44,7 +44,7 @@ configs:
       valueType: int64
     # MySQL 地址
     - key: monagent.mysql.host
-      value: 127.0.0.1
+      value: xxx.xxx.xxx.xxx
       valueType: string
     # OceanBase 监控用户
     - key: monagent.ob.monitor.user
