--- a/zh-CN/7.reference/7.command-line-tools/8.ob-agent/2.configuration-reference/2.monagent-configuration-file.md
+++ b/zh-CN/7.reference/7.command-line-tools/8.ob-agent/2.configuration-reference/2.monagent-configuration-file.md
@@ -17,8 +17,8 @@ log:
 
 ## 进程相关配置。其中，address 是默认的拉取 metrics 和管理相关接口，adminAddress 是 pprof 调试端口。
 server:
-  address: "0.0.0.0:8088"
-  adminAddress: "0.0.0.0:8089"
+  address: "xxx.xxx.xxx.xxx:8088"
+  adminAddress: "xxx.xxx.xxx.xxx:8089"
   runDir: run
 
 ## 配置相关，加密方法支持 aes 和 plain。其中，aes 使用下面 key 文件中的 key 对需要加密的配置项进行加密。
