--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-请确认待替换仲裁服务的新机器上已安装 OceanBase 数据库软件并已启动仲裁服务，详细操作可参见 [创建仲裁服务](部署文档暂未输出，链接暂时无法添加)。
+请确认待替换仲裁服务的新机器上已安装 OceanBase 数据库软件并已启动仲裁服务，详细操作可参见 [部署两副本加仲裁服务的 OceanBase 集群](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md)。
 
 ## 操作步骤
 
