--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md
@@ -32,7 +32,7 @@
 
    2. （可选）配置 **部署 OBProxy**。
 
-      如需在创建 OBProxy 集群时就部署 OBProxy，可在该步骤进行配置。否则可跳过该步骤，待集群创建成功后，通过 [接管 OBProxy](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000001542111) 或 [添加 OBProxy](../3.obproxy-management/1.add-obproxy.md) 向集群中添加 OBProxy。
+      如需在创建 OBProxy 集群时就部署 OBProxy，可在该步骤进行配置。否则可跳过该步骤，待集群创建成功后，通过 [接管 OBProxy](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000001542111) 或 [添加 OBProxy](../3.manage-obproxy/1.add-obproxy.md) 向集群中添加 OBProxy。
 
       操作步骤如下：
 
